k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-management
  namespace: student-management
  labels:
    app: student-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-management
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: student-management
    spec:
      serviceAccountName: student-app-sa
      containers:
        - name: student-management-app
          image: IMAGE_NAME
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
