k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-management-service
  namespace: student-management
spec:
  type: NodePort
  selector:
    app: student-management
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
